Deal with a mix of KnuthSequences of KnuthSequences and KnuthSequences of KnuthElements to allow for fewer container classes. InlineLM instead of InlineStackingLM for inline part of footnote. Supposedly fixed a bug in addALetterSpace.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/inlineblock@230779 13f79535-47bb-0310-9956-ffa450edef68